--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,7 +8,8 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-  
+  workflow_dispatch:
+        
 jobs:
   deploy-react-to-gh-pages:
     runs-on: ubuntu-latest
