--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,22 +13,16 @@ on:
 jobs:
   deploy-react-to-gh-pages:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [14.x, 16.x, 18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
       # checkout the repository content to github runner
       - name: Checkout
         uses: actions/checkout@v3
 
       # setup nodejs environment
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 20.9.0
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: "20"
           cache: 'npm'
           
       # install dependencies
